Fallback images for mobiles without autoplay, minor fixes to ios checkbox alignment and terms link weight

--- a/main.css
+++ b/main.css
@@ -71,7 +71,7 @@ body, button, input {
 button { border: 0; color: #FFF; background-color: #F35D72; padding: 15px 55px; cursor: pointer; line-height: 20px; }
 h2 { font-size: 30px; }
 h2, h3 { font-weight: 700; color: #F35D72; }
-a, a:active { color: #555; }
+a, a:active { color: #555; font-weight: 600; }
 p { margin: 20px 0 0; line-height: 20px; }
 
 input { border: 0; background-color: #FFF; line-height: 20px; padding: 15px; box-shadow: 0px 0px 9px -2px #CCC; }
@@ -80,11 +80,14 @@ input.missing:checked { box-shadow: 0 0 9px -2px #CCC; }
 .no-video-autoplay input { -webkit-appearance: none; }
 .no-video-autoplay input:checked { position: relative; }
 .no-video-autoplay input:checked:after { content: '✔'; position: absolute; top: 5px; left: 7px; font-size: 22px; }
+.no-video-autoplay label.confirm { position: relative; top: -10px; }
+.no-video-autoplay input[type=checkbox] { position: relative; top: 11px; left: -2px; }
 
 .introduction { position: relative; background-color: #000; height: 680px; max-height: 680px; min-height: 320px; overflow: hidden; }
 .introduction .video-container { width: 1280px; margin-left: auto; margin-right: auto; }
 .introduction .video-container .dimmer { background-color: #54265e; opacity: 0.8; position: absolute; top: 0; left: 0; right: 0; bottom: 0; }
 .introduction .video-overlay { text-align: center; position: absolute; top: 0; left: 0; right: 0; bottom: 0; }
+.no-video-autoplay .video-container { background-image: url('img/bg1024x576.jpg'); background-repeat: no-repeat; background-size: 100% auto; background-position: center center; }
 
 .logo-and-tagline .logo { margin-top: 80px; margin-bottom: 85px; }
 .logo-and-tagline h2:not(.seemore) { color: #FFF; margin-bottom: 30px; }
@@ -119,7 +122,7 @@ input.missing:checked { box-shadow: 0 0 9px -2px #CCC; }
   .logo-and-tagline .logo { margin-top: 50px; margin-bottom: 55px; width: 350px; }
   .logo-and-tagline h4 { margin-bottom: 60px; }
 }
-@media (max-width: 1000px) {
+@media (max-width: 961px) {
   h2 { font-size: 28px; }
   .logo-and-tagline .logo { margin-top: 50px; margin-bottom: 55px; width: 300px; }
   .logo-and-tagline h2 { margin-bottom: 15px; }
@@ -144,6 +147,7 @@ input.missing:checked { box-shadow: 0 0 9px -2px #CCC; }
   .sign-up-form h2, .sign-up-form label, .sign-up-form button { margin-left: 30px; margin-right: 30px; }
   .contact { padding: 30px; }
   .contact address:first-of-type { margin-left: 0; margin-right: 30px; }
+  .no-video-autoplay .video-container { min-height: 360px; background-image: url('img/bg1024x576.jpg'); background-size: auto 100%; }
 }
 @media (max-width: 370px) {
   .contact address:first-of-type { margin-left: 0; margin-right: 0; }
